@@ -24,6 +24,7 @@
 	  - Fixed crash when player gets killed when entering a new level and
 	    a trap on the previous level causes a null pointer dereference
 	    when writing the HTML map (related to C343-20).
+	  - Really reduce occurrences of hint daemon to once per game
 
 	* vanilla bug fixes:
 	  - Prevent the Book of the Dead from being destroyed when the
